# Text_to_SQL_app

./: .env  .gitignore  PROJECT_NOTES.md  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt  txt_to_sql.db  txt_to_sql.py
.github/workflows/: deploy.yml
