[project]
name = "sqlapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "streamlit>=1.55.0",
]
